Solved the issue of underline being too close to the text in Chrome. Solved it by adding text-underline-position and text-underline-offset properties.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -136,6 +136,8 @@ body {
         text-decoration: underline;
         text-decoration-color: $green;
         text-decoration-thickness: 0.3rem;
+        text-underline-position: under;
+        text-underline-offset: -0.6rem;
         // border-bottom: 3px solid $green;
       }
     }
